--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Knowledge-Vault</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    
+<body class="font-inter">
+    <header class="navbar">
+        <div class="container nav-wrapper">
+            <div class="logo"><img src="assets/logo-navbar.png" alt="logo"></div>
+
+            <nav class="nav-menu">
+                   <a href="features">Features</a>
+                    <a href="how">How It Works</a>
+                     <a href="why">Why It's Different</a>
+            </nav>
+            <div class="nav-btn"><a href="early" class="btn-primary"><button>Get Early Access</button></a></div>
+        </div>
+        
+    </header>
+    <section>
+
+    </section>
 </body>
 </html>
