--- a/index.html
+++ b/index.html
@@ -23,8 +23,55 @@
         </div>
         
     </header>
-    <section>
 
+    <section class="banner">
+        <div class="banner-content">
+            <span class="badge">Early Access Now Open</span>
+            <h1>Structured Thinking, <span>Not Just Note-Taking.</span></h1>
+            <p>A private space to store notes, links, and learning summaries — designed to
+help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+          <div class="banner-buttons">
+        <a href="#features" class="btn primary">Start Building Your Vault</a>
+        <a href="#how" class="btn secondary">▶ See How It Works</a>
+      </div>
+        </div>
+          
     </section>
+
+ <section class="notes" id="features">
+    <div class="container">
+      <h2>Notes Don't Fail, Structure Does.</h2>
+      <p class="subtitle">
+        You're not bad at learning. Your tools just weren't built for how knowledge actually works.
+      </p>
+
+      <div class="card-row">
+        <div class="note-card">
+          <div class="icon red">📂</div>
+          <h3>Scattered Notes</h3>
+          <p>Your ideas live in different apps and notebooks without meaningful connection.</p>
+        </div>
+
+        <div class="note-card">
+          <div class="icon orange">🔖</div>
+          <h3>Bookmark Overload</h3>
+          <p>Saved articles and resources pile up but are rarely reviewed or reused.</p>
+        </div>
+
+        <div class="note-card">
+          <div class="icon green">🧩</div>
+          <h3>No Idea Connections</h3>
+          <p>Insights stay isolated instead of forming deeper understanding.</p>
+        </div>
+
+        <div class="note-card">
+          <div class="icon blue">🕒</div>
+          <h3>Forgetting What You Learned</h3>
+          <p>Without structure, knowledge fades and becomes difficult to recall.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </body>
 </html>
