html file ready

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="font-inter">
@@ -15,11 +18,11 @@
             <div class="logo"><img src="assets/logo-navbar.png" alt="logo"></div>
 
             <nav class="nav-menu">
-                   <a href="features">Features</a>
-                    <a href="how">How It Works</a>
-                     <a href="why">Why It's Different</a>
+                   <a href="#features">Features</a>
+                    <a href="#how">How It Works</a>
+                     <a href="#why">Why It's Different</a>
             </nav>
-            <div class="nav-btn"><a href="early" class="btn-primary"><button>Get Early Access</button></a></div>
+            <div class="nav-btn"><a href="#early" class="btn-primary"><button>Get Early Access</button></a></div>
         </div>
         
     </header>
@@ -40,6 +43,7 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
 
  <section class="notes" id="features">
     <div class="container">
+
       <h2>Notes Don't Fail, Structure Does.</h2>
       <p class="subtitle">
         You're not bad at learning. Your tools just weren't built for how knowledge actually works.
@@ -47,31 +51,86 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
 
       <div class="card-row">
         <div class="note-card">
-          <div class="icon red">📂</div>
+          <div class="icon vector"><img src="assets/Vector.png" alt=""></div>
           <h3>Scattered Notes</h3>
-          <p>Your ideas live in different apps and notebooks without meaningful connection.</p>
+          <p>Your ideas live in 10 different apps, none of them connected.</p>
         </div>
 
         <div class="note-card">
-          <div class="icon orange">🔖</div>
+          <div class="icon bookmark"><img src="assets/Bookmarks.png" alt=""></div>
           <h3>Bookmark Overload</h3>
-          <p>Saved articles and resources pile up but are rarely reviewed or reused.</p>
+          <p>Hundreds of saved links you'll never revisit or remember.</p>
         </div>
 
         <div class="note-card">
-          <div class="icon green">🧩</div>
+          <div class="icon brain"><img src="assets/Brain.png" alt=""></div>
           <h3>No Idea Connections</h3>
-          <p>Insights stay isolated instead of forming deeper understanding.</p>
+          <p>Insights stay isolated, never building into bigger understanding.</p>
         </div>
 
         <div class="note-card">
-          <div class="icon blue">🕒</div>
+          <div class="icon info"><img src="assets/Info.png" alt=""></div>
           <h3>Forgetting What You Learned</h3>
-          <p>Without structure, knowledge fades and becomes difficult to recall.</p>
+          <p>Knowledge fades because there's no system to retain it.</p>
         </div>
       </div>
     </div>
   </section>
+
+
+ <section class="second-brain" id="why">
+    <div class="container brain-wrapper">
+      <div class="brain-image">
+        <img src="assets/knowledge.png" alt="Second Brain">
+      </div>
+
+      <div class="brain-content">
+        <span class="section-tag">THE SOLUTION</span>
+        <h2>Your Second Brain, Structured By Design.</h2>
+        <p>
+          Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.
+        </p>
+
+        <ul>
+          <li>Capture ideas with built-in structure from day one</li>
+          <li>Connect related concepts automatically as you write</li>
+          <li>Build lasting knowledge through reflection prompts</li>
+          <li>Build lasting knowledge through reflection prompts</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+
+<section class="early-access" id="early">
+    <div class="container">
+      <h2>Ready To Think More Clearly?</h2>
+       <p class="subtitle"> Join thousands of learners who are building their personal knowledge vaults. Start free, no credit card required.</p>
+      
+
+      <a href="#" class="btn primary">🚀 Get Early Access</a>
+
+      <p class="end-text">Free during early access — no credit card need.</p>
+    </div>
+  </section>
+
+
+
+<footer class="footer">
+    <div class="container footer-top">
+      <Knowledge class="footer-logo"><img src="assets/logo-footer.png" alt=""></Knowledge></div>
+
+      <div class="social-links">
+        <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+        <a href=""><i class="fa-brands fa-facebook"></i></a>
+        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+      </div>
+    </div>
+
+    <p class="copyright">
+      © 2026 Knowledge Vault. All rights reserved.
+    </p>
+  </footer>
 
 </body>
 </html>
