Fixed Get Early Access button color and removed nested button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="#how">How It Works</a>
                      <a href="#why">Why It's Different</a>
             </nav>
-            <div class="nav-btn"><a href="#early" class="btn-primary"><button>Get Early Access</button></a></div>
+            <div class="nav-btn"><a href="#early" class="btn-primary">Get Early Access</a></div>
         </div>
         
     </header>
@@ -125,11 +125,11 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
         <a href=""><i class="fa-brands fa-facebook"></i></a>
         <a href=""><i class="fa-brands fa-linkedin"></i></a>
       </div>
-    </div>
 
-    <p class="copyright">
-      © 2026 Knowledge Vault. All rights reserved.
-    </p>
+       <div class="copyright">
+      <p> © 2026 Knowledge Vault. All rights reserved.</p>
+</div>
+     
   </footer>
 
 </body>
